--- a/jpcoolingheating/templates/index.html
+++ b/jpcoolingheating/templates/index.html
@@ -1,4 +1,4 @@
-{% load static %}
+% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -50,7 +50,7 @@
                 <div class="h-100 d-inline-flex align-items-center me-4">
                     <small class="far fa-envelope-open me-2"></small>
                     <small>jpcoolingandheat@gmail.com</small>
-                </div>
+                    </div>
             </div>
         </div>
     </div>
@@ -103,6 +103,7 @@
                                 </div>
                             </div>
                         </div>
+                        </div>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -150,11 +151,11 @@
                                 <div class="d-flex align-items-center">
                                     <img class="flex-shrink-0 me-3" src="{% static 'img/icon/icon-09-primary.png' %}" alt="Customer Satisfaction">
                                     <h5 class="mb-0">Customer Satisfaction Guaranteed</h5>
-                                </div>
+                                    </div>
                             </div>
                         </div>
                         <h1 class="display-6 mb-5">Mission Statement</h1>
-                        <p>Our mission is simple: we'll do whatever it takes to ensure your family is warm in the winter and cool in the summer.</p>
+                        <p>We'll do whatever it takes to ensure your family is warm in the winter and cool in the summer.</p>
                         <div class="border-top mt-4 pt-4">
                             <div class="row">
                                 <div class="col-sm-6">
@@ -197,7 +198,6 @@
         </div>
     </div>
     <!-- About End -->
-
     <!-- Facts Start -->
     <div class="container-fluid facts my-5 py-5" data-parallax="scroll" data-image-src="{% static 'img/facts.jpg' %}">
         <div class="container py-5">
@@ -244,10 +244,9 @@
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="position-relative rounded overflow-hidden h-100" style="min-height: 400px;">
-                        <!-- Embed the video here -->
-                        <iframe class="position-absolute w-100 h-100" src="https://www.youtube.com/embed/video_id" frameborder="0" allowfullscreen></iframe>
-                    </div>
+                    <div class="position-relative rounded overflow-hidden h-100" style="min-height: 100px;">
+                        <iframe class="position-absolute w-100 h-100" src="https://www.youtube.com/embed/uEIJsu6CbvE" allowfullscreen style="object-fit: cover; border: 0;"></i>
+                            </div>
                 </div>
             </div>
         </div>
@@ -291,7 +290,7 @@
                                 <img class="img-fluid" src="{% static 'img/icon/icon-03-light.png' %}" alt="Heating Services">
                             </div>
                             <a class="h4 mx-4 mb-0" href="">Heating Services</a>
-                        </div>
+                            </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -331,8 +330,7 @@
         </div>
     </div>
     <!-- Service End -->
-
-<!-- Quote Start -->
+    <!-- Quote Start -->
        <div class="container-fluid overflow-hidden my-5 px-lg-0">
            <div class="container quote px-lg-0">
                <div class="row g-0 mx-lg-0">
@@ -379,7 +377,7 @@
                                    </div>
                                    <div class="col-12">
                                        <button class="btn btn-primary py-3 px-5" type="submit">Get A Free Quote</button>
-                                   </div>
+                                       </div>
                                </div>
                            </div>
                        </div>
@@ -405,7 +403,7 @@
                        <div class="owl-carousel testimonial-carousel">
                            <div class="testimonial-item text-center">
                                <img class="img-fluid mx-auto mb-4" src="{% static 'img/icon/icon-02-primary.png' %}" alt="Testimonial">
-                               <p class="fs-5">Joe is a very honest and qualified guy! We were told by another HVAC company that we needed a new unit. Joe came out and told us that wasn't true and fixed the problem at a fraction of the cost.</p>
+                               <p class="fs-5">Joe is a very honest and qualified guy! We were told by another HVAC company that we needed a new unit. Joe came out and told us that wasn't true and fixed the pro>
                                <h5>Bahar Khoshnoudi</h5>
                                <span>San Antonio, TX</span>
                            </div>
@@ -417,7 +415,7 @@
                            </div>
                            <div class="testimonial-item text-center">
                                <img class="img-fluid mx-auto mb-4" src="{% static 'img/icon/icon-02-primary.png' %}" alt="Testimonial">
-                               <p class="fs-5">Joe is very honest, and professional. He told me that I will need to replace my HVAC system in the future but did not pressure me into it. He fixed the issue for now. I will definitely call him back when it's time to replace it.</p>
+                               <p class="fs-5">Joe is very honest, and professional. He told me that I will need to replace my HVAC system in the future but did not pressure me into it. He fixed the issue for n>
                                <h5>Holly Rojas</h5>
                                <span>Oak Park - Northwood</span>
                            </div>
@@ -426,7 +424,7 @@
                    <div class="col-lg-3 d-none d-lg-block">
                        <div class="testimonial-right h-100">
                            <!-- Testimonial right side content -->
-                       </div>
+                           </div>
                    </div>
                </div>
            </div>
@@ -469,15 +467,14 @@
                        <a class="btn btn-link" href="">Terms & Condition</a>
                    </div>
                    <div class="col-lg-3 col-md-6">
-                       <h5 class="text-light mb-4">Follow Us</h5>
-                       <div class="d-flex">
-                           <a class="btn btn-square rounded-circle me-1" href="https://www.facebook.com/profile.php?id=100063594684854"><i class="fab fa-facebook-f"></i></a>
-                           <a class="btn btn-square rounded-circle me-1" href="https://www.instagram.com/jpcoolingandheating/"><i class="fab fa-instagram"></i></a>
-                           <a class="btn btn-square rounded-circle me-1" href="https://nextdoor.com/pages/jp-cooling-and-heating-llc-san-antonio-tx/"><img src="{% static 'img/icon/next-door.png' %}" class="nextdoor-logo" alt="Nextdoor"></a>
-                       </div>
-                   </div>
-               </div>
-           </div>
+                        <h5 class="text-light mb-4">Follow Us</h5>
+                        <div class="d-flex">
+                        <a class="btn btn-square rounded-circle me-1" href="https://www.facebook.com/profile.php?id=61555617246073&mibextid=LQQJ4d"><i class="bi bi-facebook"></i></a>
+                        <a class="btn btn-square rounded-circle me-1" href="https://www.instagram.com/jp_cooling_and_heating_?igsh=NDA5eWhhNXBlcXlw"><i class="bi bi-instagram"></i></a>
+                        <a class="btn btn-square rounded-circle me-1" href="https://nextdoor.com/pages/jp-cooling-and-heating-san-antonio-tx?init_source=org_pages&utm_campaign=1710534914835"><img src="{% static 'img/icon/next-door.png>
+                 </div>
+                </div>
+ </div>
            <div class="container-fluid copyright">
                <div class="container">
                    <div class="row">
@@ -511,3 +508,4 @@
    </body>
 
    </html>
+                                                                                                                                                                        
